<resources>
    <string name="app_name">PRA-PA</string>

    <!--edit_water_bill-->
    <string name="title_edit">Edit a water bill</string>
    <string name="text_enter_meters">Enter a water meter</string>
    <string name="text_enter_month">MM/YYYY</string>
    <string name="text_enter_record_date">DD/MM/YYYY</string>
    <string name="topic_water_meter">Water Meter :</string>
    <string name="topic_month">Year/Month of bill :</string>
    <string name="topic_date">Record Date : </string>

    <!--record_water_will-->
    <string name="title_record">Record a water bill</string>
    <string name="room_id">A101</string>

    <!--choose_plan-->
    <string name="title_choose_plan">Plan</string>
    <string name="topic_phase">ตึก</string>
    <string name="topic_floor">ชั้น</string>
    <string name="text_enter_phase">เลือกตึกที่ต้องการ</string>
    <string name="text_enter_floor">เลือกชั้นที่ต้องการ</string>

    <!--home-->
    <string name="resident_btn">Resident</string>
    <string name="staff_btn">Operational staff</string>
    <string name="legal_person_btn">legal person</string>
    <string name="des_img">logo_PRA-PA</string>

    <!--show bill-->
    <string name="topic_showBill">WATER BILL</string>
    <string name="sample_price_total">899</string>
    <string name="bath">฿</string>
    <string name="name_topic">NAME</string>
    <string name="topic_room">ROOM ID</string>
    <string name="sample_meter">0</string>

    <!--resident choose room-->
    <string name="topic_resident_choose">Enter you room</string>

    <!--Viewplan-->
    <string name="number_room">N/A</string>


    <!--global-->
    <string name="submit_btn">SUBMIT</string>

    <!--viewplan_edit-->
    <string name="title_phase">ตึก</string>

</resources>
