<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:id="@+id/parentLayout"
    tool:cardCornerRadius="40dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_margin="10dp">

        <!--topic total-->
        <TextView
            android:id="@+id/price_topic"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="80dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/price_topic"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_total_show_bill"
            android:layout_width="93dp"
            android:layout_height="43dp"
            android:layout_marginLeft="8dp"
            android:ems="3"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/sample_price_total"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/price_topic"
            app:layout_constraintTop_toTopOf="@+id/price_topic" />


        <TextView
            android:id="@+id/bath_show_bill"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/bath"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/price_total_show_bill"
            app:layout_constraintStart_toEndOf="@+id/price_total_show_bill"
            app:layout_constraintTop_toTopOf="@+id/price_total_show_bill" />

        <!--roomid-->
        <TextView
            android:id="@+id/room_id_topic_show_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/topic_room"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/price_topic"
            app:layout_constraintTop_toBottomOf="@id/price_topic" />

        <TextView
            android:id="@+id/room_id_show_bill"
            android:layout_width="54dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:ems="13"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/room_id"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/room_id_topic_show_bill"
            app:layout_constraintTop_toTopOf="@+id/room_id_topic_show_bill" />

        <!--water meter-->
        <TextView
            android:id="@+id/water_meter_topic_show_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/topic_water_meter"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/room_id_topic_show_bill"
            app:layout_constraintTop_toBottomOf="@+id/room_id_topic_show_bill" />

        <TextView
            android:id="@+id/water_meter_show_bill"
            android:layout_width="36dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/sample_meter"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/water_meter_topic_show_bill"
            app:layout_constraintTop_toBottomOf="@+id/room_id_show_bill" />

        <!--record date&ndash;&gt;-->
        <TextView
            android:id="@+id/date_topic_show_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/topic_date"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/water_meter_topic_show_bill"
            app:layout_constraintTop_toBottomOf="@+id/water_meter_topic_show_bill" />

        <TextView
            android:id="@+id/date_record_show_bill"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/thaisanslite"
            android:text="@string/text_enter_record_date"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_topic_show_bill"
            app:layout_constraintTop_toBottomOf="@+id/water_meter_show_bill" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>