<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        />


    <!--title-->
    <TextView
        android:id="@+id/title_record_water_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_record"
        android:fontFamily="@font/thaisanslite"
        android:textColor="@color/black"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/room_id_record_water_bill"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/thaisanslite"
        android:text="@string/room_id"
        android:textColor="@color/black"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="87dp" />


    <!--water meter-->
    <TextView
        android:id="@+id/water_meter_topic_record_water_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/topic_water_meter"
        android:fontFamily="@font/thaisanslite"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_id_record_water_bill"
        app:layout_constraintVertical_bias="0.114" />

    <EditText
        android:id="@+id/water_meter_record_water_bill"
        android:layout_width="199dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="@font/thaisanslite"
        android:hint="@string/text_enter_meters"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_id_record_water_bill"
        app:layout_constraintVertical_bias="0.095" />


    <!--month-->
    <TextView
        android:id="@+id/month_topic_record_water_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/topic_month"
        android:fontFamily="@font/thaisanslite"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water_meter_topic_record_water_bill"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/month_meter_record_water_bill"
        android:layout_width="166dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/text_enter_month"
        android:fontFamily="@font/thaisanslite"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />


    <!--date-->
    <TextView
        android:id="@+id/date_topic_record_water_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/topic_date"
        android:fontFamily="@font/thaisanslite"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_topic_record_water_bill"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/date_meter_record_water_bill"
        android:layout_width="193dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/text_enter_record_date"
        android:fontFamily="@font/thaisanslite"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_meter_record_water_bill"
        app:layout_constraintVertical_bias="0.102" />


    <!--submit btn-->
    <Button
        android:id="@+id/submit_btn_meter_record_water_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/thaisanslite"
        android:text="@string/submit_btn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_id_record_water_bill"
        app:layout_constraintVertical_bias="0.747"
        tools:layout_editor_absoluteX="131dp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_back"
        app:layout_editor_absoluteY="7dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="40dp"
        android:layout_height="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_exit"
        app:layout_editor_absoluteY="8dp" />

</android.support.constraint.ConstraintLayout>